# setuptools-pep621-readme

./: README.md  pyproject.toml  setup.py
